cluster/games/valheim/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim-server
spec:
  selector:
    matchLabels:
      game: valheim
  template:
    metadata:
      labels:
        game: valheim
    spec:
      containers:
      - name: valheim-server
        image: lloesche/valheim-server:latest
        ports:
        - containerPort: 2456
          name: game
          protocol: UDP
        - containerPort: 2457
          name: query
          protocol: UDP
        - containerPort: 80
          name: status
          protocol: tcp
        volumeMounts:
        - mountPath: /config
          name: world-data
        - mountPath: /opt/valheim
          name: server-base
        resources:
          requests:
            memory: 3Gi
            cpu: 2
          limits:
            memory: 5Gi
            cpu: 2
      volumes:
      - name: world-data
        persistentVolumeClaim:
          claimName: valheim-world-data
      - name: server-base
        persistentVolumeClaim:
          claimName: valheim-server-base
