cluster/games/valheim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valheim
spec:
  type: NodePort
  selector:
    game: valheim
  ports:
  - name: game
    port: 2456
    targetPort: 2456
    protocol: UDP
    nodePort: 32715
  - name: query
    port: 2457
    targetPort: 2457
    protocol: UDP
    nodePort: 32716
